--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,13 @@
 export("%>%")
 export(cbwg_scen_to_fair)
 export(cbwg_to_loo_global_emissions)
+export(find_neutral_probabilities)
 export(gen_fair)
+export(gen_fair_loo)
 export(get_conc)
 export(get_emissions)
 export(get_forcing)
 export(get_ohc)
 export(get_warming)
 export(import_python_modules)
-export(modify_emissions)
 importFrom(magrittr,"%>%")
