--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cbwg_to_loo_global_emissions)
 export(find_neutral_probabilities)
 export(gen_fair)
 export(gen_fair_loo)
+export(gen_fair_loo_3)
 export(get_conc)
 export(get_emissions)
 export(get_forcing)
